# radiochat

./: .gitmodules  CMakeLists.txt  LICENSE.md  PicoHAL.hpp  README.md  lwipopts.h  radiochat.cpp  tcpip.cpp  tcpip.hpp
dhcpserver/: dhcpserver.c  dhcpserver.h
dnsserver/: dnsserver.c  dnsserver.h
docs/: index.html
docs/img/: dns-cap.pcap
